# project-dashboard

./: .gitignore  DPROJECTShost-status-agenttest_agent_api.py  GEMINI.md  HOTKEY_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  StartDashboard.vbs  docker-compose.yml  install.ps1  run_tray.pyw  run_tray_debug.bat
backend/: Dockerfile  command_palette.html  command_palette_launcher.py  command_palette_ui.py  hotkey_manager.py  main.py  models.py  pyproject.toml  requirements.txt  test_hotkey.py  test_keys.py  tray.py
backend/backend/data/: history.duckdb.wal  projects.json
backend/data/: config.example.json  platforms.example.json  platforms.json  projects.example.json  projects.json
backend/frontend_dist/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
backend/frontend_dist/404/: index.html
backend/frontend_dist/_next/static/chunks/: 1571fb3c595ad4a6.js  2caf59dfb702782d.css  2f1106e5ce1149b8.js  9bed6148b0c01510.js  a6e933d9ff0abcc1.js  (+3 more)
backend/frontend_dist/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.txt  __next._tree.txt  index.txt
backend/frontend_dist/_not-found/__next._not-found/: __PAGE__.txt
backend/routers/: config.py  homepage.py  hoststatus.py  monitor.py  platforms.py  projects.py  scrutiny.py
backend/services/: cache.py  config.py  history.py  launcher.py  scanner.py  store.py
backend/tests/: test_homepage_scrape.py  test_host_agent_integration.py  test_scrutiny_scrape.py
backend/utils/: path_utils.py
(+19 files in other folders)
